reports/pandas-2023-03-03.log
Traceback (most recent call last):
  File "/home/bb1000/miniconda3/envs/bb1000/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/bb1000/miniconda3/envs/bb1000/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/bb1000/miniconda3/envs/bb1000/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/bb1000/miniconda3/envs/bb1000/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/bb1000/miniconda3/envs/bb1000/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/home/bb1000/miniconda3/envs/bb1000/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/bb1000/miniconda3/envs/bb1000/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/bb1000/miniconda3/envs/bb1000/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def read_findata(csv_file):
    # YOUR CODE HERE
    ################
    
read_findata('amazon.csv')
------------------

[0;36m  Cell [0;32mIn[3], line 5[0;36m[0m
[0;31m    read_findata('amazon.csv')[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block after function definition on line 1

IndentationError: expected an indented block after function definition on line 1 (3095469753.py, line 5)

